get pokemon card - my version

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="poke-container" id="poke-container">
         <!-- the poke card -->
-        <div class="pokemon" style="background-color: rgb(222,253,224);">
+        <!-- <div class="pokemon" style="background-color: rgb(222,253,224);">
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="poke-img">
             </div>
@@ -22,7 +22,7 @@
                 <h3 class="name">Balbasaur</h3>
                 <small class="type">Type <span>Grass</span></small>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
